Deduplicate code in SelectorToFilterTranslator
There was a duplication of selector-to-filter translating code between
linked objects and security enforcer since 4.2. Now, with the advent of
ValueSelector, it became easy to fix. This commit does that.